# app-bisellium

./: .dockerignore  .gitignore  .gitpod.yml  CONTRIBUTING.md  Dockerfile  MANIFEST.in  README.md  THANKS.md  requirements.txt  setup.cfg
bisellium/: __init__.py  config.py  error_handlers.py  extensions.py  gladiatores.py  home.py  misc.py  settings.py
bisellium/api/: base.py  ludus.py
bisellium/classes/: gladiator.py  print_blocker.py
bisellium/lib/api_clients/: arena.py  base.py  exceptions.py  ludus.py  podium.py
bisellium/lib/pagan/: generator.py  hashgrinder.py  pagan.py  pgnreader.py
bisellium/model/: gladiator.py
bisellium/models/: duel_results.py  gladiator.py
bisellium/public/: gladiatores.py  misc.py
bisellium/templates/: base.html
bisellium/templates/actadiurna/: all-results.html  one-duel-result.html
bisellium/templates/error/: 500.html  501.html
bisellium/templates/errors/: 404.html  500.html  501.html
bisellium/templates/gladiatores/: all-gladiators.html  gladiatores.html  one-gladiator.html
bisellium/templates/home/: index.html
bisellium/templates/misc/: api-status.html  glossary.html  not-implemented.html
bisellium/templates/podium/: rank.html
bisellium/views/: __init__.py  actadiurna.py  errors.py  gladiatores.py  healtcheck.py  home.py  misc.py  podium.py
