[metadata]
name = bisellium
version = 0.1.0
url = https://github.com/colosseum-project/app-bisellium
license = MIT
maintainer = Colosseum Project Team
description = WebUI application of the Colosseum project
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Framework :: Flask
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    Flask==2.0.2
    prometheus-flask-exporter==0.18.1
    Pillow==8.4.0

[flake8]
ignore = E203
max-line-length = 88
